# Serverless-Python

./: pyproject.toml
backend/: container.py  data.py  docker.py  helper.py  main.py
client/: container.py  deploy.py  image.py
examples/: main.py
src/: container.py  image.py
